--- a/sass/partials/_base.sass
+++ b/sass/partials/_base.sass
@@ -2,6 +2,7 @@
 %base-container
     margin: 0 auto
     max-width: 1040px
+    padding-bottom: 2em
 
 %base-title
     margin: 0
