--- a/sass/partials/blocks/_button-block.sass
+++ b/sass/partials/blocks/_button-block.sass
@@ -3,7 +3,7 @@
     display: inline-block
     text-align: center
     padding-top: 2em
-    padding-bottom: 1.8em
+    padding-bottom: 2em
     &--bg-black
         background-color: #282828
     &--def-space
