--- a/sass/partials/blocks/_grid-contacts.sass
+++ b/sass/partials/blocks/_grid-contacts.sass
@@ -4,36 +4,37 @@
     max-width: 900px
     margin: 0 auto
 
-
     &__item
-        border: 4px solid #f5f5f7
         position: relative
+        border: 4px solid #f5f5f7
         padding: 1.8em
         margin-right: 5px
         margin-left: 5px
         margin-bottom: 5px
         width: 280px
-        +flexbox
-     
 
     &__text
         display: block
-
+        margin-left: 80px
  
-    &__icon
-        width: 30px
-        height: 30px
-        margin-right: 20px
-
     &__link
+        margin-left: 80px
         color: #5a93e0
         text-decoration: none
         border-bottom: 1px dashed
+
+    &__icon
+        position: absolute
+        width: 30px
+        height: 30px
+        left: calc(50% - 30px)
+        margin-left: -45px
 
 @media screen and (max-width: $medium-scale)
     .grid-contacts
         &__item
             padding: 1em
+
 
 @media screen and (max-width: $small-scale)
     .grid-contacts
@@ -41,6 +42,13 @@
 
         &__item
             margin-bottom: 20px
+            width: 250px
+            margin: 0 auto
+            margin-bottom: 10px
+
+        &__icon
+            left: calc(50% - 45px)
+
      
 
     
